# apt-index

./: .dockerignore  .env.example  .gitattributes  .gitignore  CONTEXT.md  README.md  apt-index.lock.json  apt-index.toml  artifact_health.json  packages.toml  pyproject.toml  skills-lock.json  track_health.json
.github/workflows/: publish.yml  reject-invalid-pr-source-branches.yml
docker/: apt-index-test.Dockerfile
docs/: configuration-migration-plan.md  configuration.md
docs/adr/: 0001-use-upstream-package-metadata.md  0002-use-a-shared-suite-first.md  0003-separate-update-policy-from-source-resolver.md  0004-fix-github-releases-by-tag.md  0005-track-github-latest-release.md  0006-sign-repository-metadata-from-first-release.md  0007-store-resolved-artifacts-in-a-lockfile.md  0008-commit-tracked-refreshes-directly.md  0009-keep-lockfile-and-health-report-separate.md  0010-use-aur-only-for-upstream-deb-discovery.md  0011-use-short-source-resolver-keys.md  0012-publish-redirect-rules-as-static-data.md  0013-split-health-reports-by-purpose.md  0014-generate-packages-from-the-lockfile.md  0015-deploy-generated-apt-tree-without-committing-dist.md  0016-use-python-for-refresh-build-tools.md  0017-separate-repository-configuration-from-software-entries.md  0018-normalize-entry-configuration-by-architecture.md  0019-shard-redirect-rules-by-entry.md  0020-use-cdn-cached-redirects-and-http-analytics.md
src/apt_index/: __init__.py  cli.py  config.py  deb.py  deploy_tree.py  download_stats.py  health.py  paths.py  (+8 more)
static/: index.html
tests/: test_cli.py  test_sources.py
(+13 files in other folders)
